Added Aggressive Change Stream, DataTypeFor_Id, and  MongoRestore Performance improvements.

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,4 @@
 /OnlineMongoMigrationProcessor/bin
 /publish
 /.vs/ProjectEvaluation
-/.vs/CopilotSnapshots/DC67F705855CCB4DB72FD7F4510F318F
-/.vs/CopilotSnapshots/820DCA350058CE49BAA58BAB93050E8A
-/.vs/CopilotSnapshots/3D98CACC18F1834FA1E3FA527DD50BDE
-/.vs/CopilotSnapshots/AF9D0DEA81228D4F8864DEDA45AAD8DC
+/.vs/CopilotSnapshots/
