--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@
 /publish
 /.vs/ProjectEvaluation
 /.vs/CopilotSnapshots/
+/tests/OnlineMongoMigrationProcessor.Tests/bin/Debug/net9.0
+/tests/OnlineMongoMigrationProcessor.Tests/obj/Debug/net9.0
