--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@
 /.vs/CopilotSnapshots/
 /tests/OnlineMongoMigrationProcessor.Tests/bin/Debug/net9.0
 /tests/OnlineMongoMigrationProcessor.Tests/obj/Debug/net9.0
+/tests/OnlineMongoMigrationProcessor.Tests/obj
