--- a/MongoMigrationWebApp/MongoMigrationWebApp.csproj
+++ b/MongoMigrationWebApp/MongoMigrationWebApp.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>ca29dd9a-23fe-4c3b-ad2b-fb0dadacd5fa</UserSecretsId>
-    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
