Added DocumentDB persistence

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 /tests/OnlineMongoMigrationProcessor.Tests/bin
 /tests/OnlineMongoMigrationProcessor.Tests/obj
 *.dll
+/MongoMigrationWebApp/appsettings.Development.json
