Add DocumentDB persistence

--- a/MongoMigrationWebApp/appsettings.json
+++ b/MongoMigrationWebApp/appsettings.json
@@ -7,5 +7,9 @@
   },
   "AllowedHosts": "*",
   "DetailedErrors": true,
-  "AllowMongoDump": true
+  "AllowMongoDump": true,
+  "StateStore": {
+    "ConnectionStringOrPath": "",
+    "UseLocalDisk": true
+  }
 }
