--- a/MongoMigrationWebApp/Properties/launchSettings.json
+++ b/MongoMigrationWebApp/Properties/launchSettings.json
@@ -5,7 +5,8 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "ResourceDrive": "C:\\MigrationDrive"
+        "ResourceDrive": "C:\\MigrationDrive",
+        "ExclusiveRestoreMode": "True"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "https://localhost:7268;http://localhost:5105"
