--- a/MongoMigrationWebApp/Dockerfile
+++ b/MongoMigrationWebApp/Dockerfile
@@ -31,15 +31,62 @@ FROM base AS final
 # Switch to root to install MongoDB tools
 USER root
 
-# Install MongoDB Database Tools
-RUN apt-get update && \
-    apt-get install -y wget gnupg && \
-    wget -qO - https://www.mongodb.org/static/pgp/server-7.0.asc | apt-key add - && \
-    echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/debian bookworm/mongodb-org/7.0 main" | tee /etc/apt/sources.list.d/mongodb-org-7.0.list && \
-    apt-get update && \
-    apt-get install -y mongodb-database-tools && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+ARG TARGETARCH
+ARG MongoDumpURL=""
+ARG MongoRestoreURL=""
+ENV MongoDumpURL=${MongoDumpURL}
+ENV MongoRestoreURL=${MongoRestoreURL}
+ENV PATH="/usr/local/bin:${PATH}"
+
+# Install MongoDB tools.
+# - If MongoDumpURL and MongoRestoreURL are both provided and different, install each tool from its own URL.
+# - Otherwise, use the current single-package approach.
+RUN set -eux; \
+    apt-get update; \
+    apt-get install -y wget gnupg ca-certificates tar gzip \
+        libcurl4 \
+        libgssapi-krb5-2 \
+        libkrb5-3 \
+        libsasl2-2 \
+        libssl3 \
+        libldap-2.5-0 \
+        zlib1g; \
+    if [ -z "$MongoDumpURL" ] || [ -z "$MongoRestoreURL" ]; then \
+        if [ "${TARGETARCH:-amd64}" = "arm64" ]; then \
+            DUMP_DEFAULT_URL="https://fastdl.mongodb.org/tools/db/mongodb-database-tools-ubuntu2204-arm64-100.9.4.tgz"; \
+            RESTORE_DEFAULT_URL="https://fastdl.mongodb.org/tools/db/mongodb-database-tools-ubuntu2204-arm64-100.13.0.tgz"; \
+        else \
+            DUMP_DEFAULT_URL="https://fastdl.mongodb.org/tools/db/mongodb-database-tools-ubuntu2204-x86_64-100.9.4.tgz"; \
+            RESTORE_DEFAULT_URL="https://fastdl.mongodb.org/tools/db/mongodb-database-tools-ubuntu2204-x86_64-100.13.0.tgz"; \
+        fi; \
+        MongoDumpURL="${MongoDumpURL:-$DUMP_DEFAULT_URL}"; \
+        MongoRestoreURL="${MongoRestoreURL:-$RESTORE_DEFAULT_URL}"; \
+    fi; \
+    if [ -n "$MongoDumpURL" ] && [ -n "$MongoRestoreURL" ] && [ "$MongoDumpURL" != "$MongoRestoreURL" ]; then \
+        mkdir -p /opt/mongo-tools/dump /opt/mongo-tools/restore; \
+        wget -O /tmp/mongodump-tools.tgz "$MongoDumpURL"; \
+        wget -O /tmp/mongorestore-tools.tgz "$MongoRestoreURL"; \
+        tar -xzf /tmp/mongodump-tools.tgz -C /opt/mongo-tools/dump; \
+        tar -xzf /tmp/mongorestore-tools.tgz -C /opt/mongo-tools/restore; \
+        DUMP_BIN="$(find /opt/mongo-tools/dump -type f -name mongodump | head -n 1)"; \
+        RESTORE_BIN="$(find /opt/mongo-tools/restore -type f -name mongorestore | head -n 1)"; \
+        test -n "$DUMP_BIN"; \
+        test -n "$RESTORE_BIN"; \
+        chmod +x "$DUMP_BIN" "$RESTORE_BIN"; \
+        ln -sf "$DUMP_BIN" /usr/local/bin/mongodump; \
+        ln -sf "$RESTORE_BIN" /usr/local/bin/mongorestore; \
+    else \
+        wget -qO - https://www.mongodb.org/static/pgp/server-7.0.asc | apt-key add -; \
+        echo "deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/debian bookworm/mongodb-org/7.0 main" | tee /etc/apt/sources.list.d/mongodb-org-7.0.list; \
+        apt-get update; \
+        apt-get install -y mongodb-database-tools; \
+    fi; \
+    command -v mongodump; \
+    command -v mongorestore; \
+    mongodump --version; \
+    mongorestore --version; \
+    apt-get clean; \
+    rm -rf /var/lib/apt/lists/* /tmp/mongodump-tools.tgz /tmp/mongorestore-tools.tgz
 
 # Create the migration data directory structure that the app expects
 # The app looks for ResourceDrive/home/ directory structure
